--- a/Small_bag_inv/Small_bag_inv.vcxproj
+++ b/Small_bag_inv/Small_bag_inv.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="bag.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Inventory.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
