"Phase 5 REAL: engine-ready inventory core with demo driver
- Core inventory is engine-agnostic (no console I/O)
- Strong status reporting via BagResult
- Engine demo proves Add/Save/Load/GetItems
- UI/menu logic isolated to main demo"

--- a/Small_bag_inv/Small_bag_inv.vcxproj
+++ b/Small_bag_inv/Small_bag_inv.vcxproj
@@ -123,11 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bag.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="bagv4.cpp" />
+    <ClCompile Include="engine_demo.cpp" />
+    <ClCompile Include="mainv4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="bag.h" />
+    <ClInclude Include="bagv4.h" />
+    <ClInclude Include="bag_Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Inventory.txt" />
