--- a/Small_bag_inv/Small_bag_inv.vcxproj.filters
+++ b/Small_bag_inv/Small_bag_inv.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="engine_demo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InventoryWrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bagv5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="bag_Utilsv5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InventoryWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
